Alteração no nome endereco para rua.

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,6 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='cadastro.js'></script>
 </head>
 <body>
     <h1>Formulario de Cadastro</h1>
@@ -62,8 +61,8 @@
         </div>
       <br> 
         <div class="field">
-            <label for="Endereço">Endereço:</label>
-            <input type="text" id="endereço" name="endereço" placeholder="Digite seu Endereço*" required>
+            <label for="Rua">Rua:</label>
+            <input type="text" id="rua" name="rua" placeholder="Digite nome da rua*" required>
         </div>
       <br>
         <div class="field">
@@ -92,5 +91,6 @@
         </div>
         <br>
         <button type="submit" onclick="Verifica()" > Acessar</button>
+        <script src='cadastro.js'></script>
   </body>
 </html>
